# Protocol-algorithm

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  COMPLETION-REPORT.md  COMPLIANCE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FINAL-COMPLETION-REPORT.md  FINAL-REPORT.md  GITHUB-PUSH-INSTRUCTIONS.md  Leach协议.md  PROJECT-SUMMARY.md  PUSH-GUIDE.md  README.md  REFACTOR-PLAN.md  __init__.py  cli.py  code  demo 爬虫  demo.py  docker-compose.yml  generate_data.py  leach_code.py  main.py  package-lock.json  pyproject.toml  requirements.txt  test.py
.git_backup/: COMMIT_EDITMSG  config  index  packed-refs
.git_backup/logs/: HEAD
.git_backup/logs/refs/remotes/origin/: HEAD
.git_backup/objects/pack/: pack-ccdb8bef146a75e36844a30365e5bc882f2c7ae8.idx  pack-ccdb8bef146a75e36844a30365e5bc882f2c7ae8.pack  pack-ccdb8bef146a75e36844a30365e5bc882f2c7ae8.rev
.git_backup/refs/heads/: master
.github/workflows/: build-fix.yml  ci.yml
.trae/documents/: LEACH协议算法项目优化方案.md
config/: config.yaml  defaults.yaml  leach_ai.yaml
core/: Cargo.toml
core/benches/: leach_benchmark.rs
core/src/: lib.rs
core/src/leach/: cluster.rs  energy.rs  mod.rs  node.rs  protocol.rs
core/src/network/: grid.rs  mod.rs  topology.rs
core/src/simulation/: engine.rs  metrics.rs  mod.rs
core/src/utils/: math.rs  mod.rs  random.rs
core/tests/: integration_tests.rs
data/: all_labels.npy  all_nodes.npy  train_X.npy  train_y.npy
docs/: DEVELOPER-GUIDE.md  algorithm.md  api_reference.md  tutorial.md
examples/: advanced_usage.py  compare_variants.py  reproduce.py  run_ai_leach.py  run_classic_leach.py
python/: Cargo.toml  pyproject.toml
python/examples/: basic_example.py
python/src/: lib.rs  wrapper.rs
python/tests/: __init__.py  test_bindings.py
scripts/: build.sh
src/: __init__.py
src/ai/: __init__.py  feature_engineering.py  inference.py  model.py  pytorch_selector.py  selector.py  sklearn_selector.py  trainer.py
src/config/: __init__.py  validator.py
src/data/: __init__.py  annotator.py  cleaner.py  generator.py  sampler.py
src/energy/: __init__.py  models.py  radio_model.py
src/leach/: __init__.py  base.py  classic.py  core.py  leach_c.py  leach_ee.py  leach_m.py  utils.py  variants.py  visualization.py
src/models/: __init__.py  base_station.py  cluster_head.py  network.py  node.py
src/simulation/: __init__.py  engine.py
src/visualization/: __init__.py  animator.py  comparison.py  metrics_plots.py
tests/: __init__.py  test.py  test_ai_models.py  test_benchmarks.py  test_energy.py  test_network.py  test_optimized.py
viz/: __init__.py  demo_viz.py  pyproject.toml  requirements.txt
web/: Cargo.toml
web/frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
web/frontend/src/: App.tsx
web/frontend/src/components/: ControlPanel.tsx  MetricsChart.tsx  NetworkViz.tsx
web/frontend/src/styles/: index.css
web/src/: main.rs
