[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protocol-algorithm"
version = "2.0.0"
description = "Multi-Layer LEACH Protocol Simulation & AI Optimization Platform for WSN with Python 3.14"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.14"
authors = [
    {name = "xfengyin"}
]
keywords = ["WSN", "LEACH", "wireless-sensor-network", "clustering", "AI-optimization", "multi-layer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "pyyaml>=6.0.1",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "tqdm>=4.67.0",
    "cvxpy>=1.5.0",
]

[project.optional-dependencies]
simulation = [
    "simpy>=4.1.0",
]
ai = [
    "torch>=2.4.0",
    "lightgbm>=4.4.0",
    "shap>=0.45.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.0",
    "black>=24.10.0",
    "isort>=5.13.0",
    "ruff>=0.6.0",
    "mypy>=1.13.0",
    "pyright>=1.1.0",
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
    "ipython>=8.24.0",
]
all = [
    "simpy>=4.1.0",
    "torch>=2.4.0",
    "lightgbm>=4.4.0",
    "shap>=0.45.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.0",
    "black>=24.10.0",
    "isort>=5.13.0",
    "ruff>=0.6.0",
    "mypy>=1.13.0",
]

[project.scripts]
leach-sim = "main:main"
leach-cli = "cli:main"
multi-layer-sim = "examples.multi_layer_simulation:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
python-version = "3.14"
python-preference = "only-managed"

[tool.black]
line-length = 100
target-version = ['py314']

[tool.isort]
profile = "black"
line_length = 100
py_version = 314

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
strict = true

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing -n auto"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]
