[package]
name = "protocol-algo-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core LEACH protocol algorithm implementation"

[dependencies]
ndarray = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "leach_benchmark"
harness = false
