[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "protocol-algo"
version = "2.0.0"
description = "Wireless Sensor Network Protocol Algorithm Simulation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Kk", email = "xfengyin@gmail.com" }
]
keywords = ["wsn", "leach", "simulation", "algorithm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "plotly>=5.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark",
    "black",
    "ruff",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
