[package]
name = "protocol-algo-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Web server for Protocol-algorithm visualization"

[dependencies]
protocol-algo-core = { path = "../core" }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = "0.3"
uuid = { version = "1.6", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
